using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Axis {

    public const string VERTICAL_AXIS = "Vertical";
    public const string HORIZONTAL_AXIS = "Horizontal";
}

public class Tags
{
    public const string PLAYER_TAG = "Player";
}

public class AnimationTags
{
    public const string WALK_PARAMETER = "walk";
    public const string ATTACK_PARAMETER_0 = "attack_0";
    public const string ATTACK_PARAMETER_1 = "attack_1";
    public const string DEFEND_PARAMETER = "defend";
}

